--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,25 @@
 ---
+
 ---
 
-<div class="ui top fixed menu" style="background-color: #f8f8f8;">
-  <div class="ui flex items-center">
-    <a class="mt1 ml1" href="/">
+<div class="sticky top-0 z-50 bg-white/80 shadow-md">
+  <nav class="flex items-center justify-between text-black h-12">
+    <a class="mt1 ml-1" href="/">
       <img src="/assets/favicon-32x32.png" width="32" height="32" alt="" />
     </a>
-  </div>
-  <div class="right menu">
-    <a class="item f6" href="/writes"> write </a>
-    <a class="item f6" href="/experiments"> experiment </a>
-    <a class="item f6" href="/resume"> work </a>
-  </div>
+    <div class="flex items-stretch h-full nav-links ">
+      <a
+        class="px-4 border-l-2 border-l-gray-200 hover:bg-gray-100 duration-200 flex items-center h-full overflow-hidden"
+        href="/writes">write</a
+      >
+      <a
+        class="px-4 border-l-2 border-l-gray-200 hover:bg-gray-100 duration-200 flex items-center h-full overflow-hidden"
+        href="/experiments">experiment</a
+      >
+      <a
+        class="px-4 border-l-2 border-l-gray-200 hover:bg-gray-100 duration-200 flex items-center h-full overflow-hidden"
+        href="/resume">work</a
+      >
+    </div>
+  </nav>
 </div>
