--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -5,12 +5,10 @@
 <div
   class="prose
 	prose-invert
-	max-w-[780px]
   prose-h1:font-bold prose-h1:text-xl
 	prose-body:text-black prose-body:text-base
 	prose-headings:text-black
 	prose-p:text-black
-  prose-a:text-blue-600
 	prose-code:text-black
 	prose-code:bg-inherit
 	prose-code:font-thin
@@ -21,7 +19,7 @@
 	prose-ul:list-disc prose-ul:pl-4
 	prose-strong:text-black
 	prose-ruby:text-black
-	prose-li:m-0 prose-li:text-black"
+	prose-li:text-black"
 >
   <slot />
 </div>
