--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -4,7 +4,7 @@ import Prose from '../components/Prose.astro';
 const { frontmatter } = Astro.props;
 ---
 <BaseLayout>
-  <div class="standard-article">
+  <div class="content-container section-spacing">
     <Prose>
       <slot />
     </Prose>
