--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -5,92 +5,7 @@ const pageTitle = "experiments";
 ---
 
 <BaseLayout pageTitle={pageTitle} includeFooter={false}>
-    <style>
-        p {
-            font-family: "Courier New", Courier, monospace;
-            font-size: 14px;
-            font-weight: bold;
-            letter-spacing: 1px;
-            text-align: center;
-            margin: 0;
-        }
-
-        .explist {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .explist a {
-            overflow: hidden;
-            counter: numberH;
-            counter-increment: numberH;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            border: 1px solid #222;
-            background-color: #eee;
-            padding: 10px;
-            width: 100px;
-            height: 100px;
-            text-align: center;
-            text-decoration: none;
-            color: #222;
-        }
-
-        .explist a:hover {
-            background-color: #222;
-            color: #fff;
-        }
-
-        .explist a span.label {
-            font-size: 80px;
-            font-weight: bold;
-            color: #ddd8;
-        }
-
-        .explist a span.description {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 18px;
-            line-height: 1;
-            font-weight: bold;
-            color: #222;
-        }
-
-        .explist a span.counter {
-            position: absolute;
-            bottom: -4px;
-            right: 2px;
-            font-size: 12px;
-            font-weight: bold;
-            color: #222;
-        }
-
-        .explist a span.counter::before {
-            content: counter(numberH);
-        }
-
-        .explist a:hover span.description {
-            color: #fff;
-        }
-
-        .explist a:hover span.label {
-            color: #444;
-            filter: blur(2px);
-        }
-
-        .explist a:hover span.counter {
-            color: #fff;
-        }
-
-    </style>
-
-    <div class="standard-article">
+    <div class="content-container section-spacing">
         <div class="explist">
             <a href="/experiments/seam" class="shadow hover">
                 <span class="label">SC</span>
