--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Launcher from '../components/launcher';
+import ParticleTypingSystem from '../components/ParticleTypingSystem.jsx';
 ---
 <BaseLayout includeHeader={false} includeFooter={false}>
-    <Launcher client:load />
+    <ParticleTypingSystem client:load />
 </BaseLayout>
