--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,6 @@
-<footer class="flex justify-between">
-  <div>I'm Joe Maddalone</div>
-  <div><i>This is not a blog, these pages are changed all the time.</i></div>
+<footer class="content-container page-footer">
+  <div class="border-t-1 border-gray-200 flex justify-between pt-6 pb-6 text-xs">
+    <div>I'm Joe Maddalone</div>
+    <div><i>This is not a blog, these pages are changed all the time.</i></div>
+  </div>
 </footer>
