--- a/src/pages/experiments/canvas-video-shape/index.astro
+++ b/src/pages/experiments/canvas-video-shape/index.astro
@@ -2,36 +2,43 @@
 import ExpLayout from "../../../layouts/ExpLayout.astro";
 ---
 
-<ExpLayout pageTitle="Canvas video shape" sui tachyons>
-  <style is:inline>
-    .page {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-    }
-  </style>
-  <div class="page">
-    <div class="header mt4">
-      <h1 class="ui header">
+<ExpLayout pageTitle="Canvas video shape">
+
+  <div class="mx-auto mt-6 prose">
+    <div class="header mt-4">
+      <h1 class="header">
         <div class="content">Canvas video shape clipping</div>
       </h1>
     </div>
 
-    <div class="flex">
-      <div data-shape="star" class="ui icon button shape-button">star</div>
+    <div class="flex items-center justify-center">
+      <button
+        data-shape="star"
+        class="shape-button rounded-l-sm border border-gray-200 px-3 py-2 font-medium text-gray-700 transition-colors hover:bg-gray-50 hover:text-gray-900 focus:z-10 focus:bg-blue-50"
+      >
+        star
+      </button>
 
-      <div data-shape="ellipse" class="ui icon button shape-button">
+      <button
+        data-shape="ellipse"
+        class="shape-button -ml-px border border-gray-200 px-3 py-2 font-medium text-gray-700 transition-colors hover:bg-gray-50 hover:text-gray-900 focus:z-10 focus:bg-blue-50"
+      >
         ellipse
-      </div>
+      </button>
 
-      <div data-shape="regPolygon" class="ui icon button shape-button">
+      <button
+        data-shape="regPolygon"
+        class="shape-button -ml-px rounded-r-sm border border-gray-200 px-3 py-2 font-medium text-gray-700 transition-colors hover:bg-gray-50 hover:text-gray-900 focus:z-10 focus:bg-blue-50"
+      >
         polygon
-      </div>
+      </button>
 
-      <div data-shape="x" class="ui icon button shape-button">x</div>
+      <button
+        data-shape="x"
+        class="shape-button -ml-px rounded-r-sm border border-gray-200 px-3 py-2 font-medium text-gray-700 transition-colors hover:bg-gray-50 hover:text-gray-900 focus:z-10 focus:bg-blue-50"
+      >
+        x
+      </button>
     </div>
     <input type="hidden" id="shape" value="star" />
     <div id="container"></div>
@@ -50,6 +57,8 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
         $("#shape").value = button.dataset.shape;
       });
     });
+
+    $("[data-shape='star']").focus();
 
     const createVideo = (src) => {
       const video = dce("video");
@@ -75,7 +84,7 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
           console.log("loaded!");
           setInterval(draw.bind(this), 10);
         },
-        false,
+        false
       );
       video.play();
     };
@@ -122,7 +131,7 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
               .L(innerPoints[i + 1][0], innerPoints[i + 1][1])
               .L(
                 innerPoints[(i + 2) % numPoints][0],
-                innerPoints[(i + 2) % numPoints][1],
+                innerPoints[(i + 2) % numPoints][1]
               );
           }
           break;
