--- a/src/pages/experiments/html-svg-canvas/index.astro
+++ b/src/pages/experiments/html-svg-canvas/index.astro
@@ -3,18 +3,8 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
 import ChartCatch from "../../../components/chart-catch";
 ---
 
-<ExpLayout pageTitle="Canvas video shape" sui tachyons>
-  <style>
-    .page {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-top: 50px;
-    }
-  </style>
-  <div class="page">
+<ExpLayout pageTitle="Canvas video shape">
+  <div class="page container mx-auto max-w-2xl mt-8 prose">
     <div class="mb4" style="max-width: 780px;">
       <h1>HTML over SVG over Canvas</h1>
       <p>
