move from react-sprint to motion

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import ParticleTypingSystem from '../components/ParticleTypingSystem.jsx';
+import Intro from '../components/Intro.jsx';
 ---
 <BaseLayout includeHeader={false} includeFooter={false}>
-    <ParticleTypingSystem client:load />
+    <Intro client:load />
 </BaseLayout>
