--- a/src/pages/experiments/particles/index.astro
+++ b/src/pages/experiments/particles/index.astro
@@ -61,7 +61,7 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
   const BLUR_FILTER = "blur(4px)";
   let SHOW_PATH = false;
 
-  const COLORS = ["red", "green", "blue"];
+  const COLOR = "#222";
 
   // Utils
   const randomRange = (min, max) => min + Math.random() * (max - min);
@@ -107,7 +107,7 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
         yspeed: randomRange(SPEED_MIN, SPEED_MAX),
         size: randomRange(SIZE_MIN, SIZE_MAX),
         shape: "circle",
-        color: COLORS[Math.floor(Math.random() * COLORS.length)],
+        color: COLOR,
       });
     }
   }
@@ -139,7 +139,6 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
 
     const p = new path();
     const l = new path();
-    let lastColor = COLORS[0];
     for (let i = 0; i < parts.length; i++) {
       const part = parts[i];
       p[part.shape](part.size, part.x, part.y);
@@ -147,7 +146,6 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
         l.moveTo(part.x, part.y);
         l.lineTo(parts[i + 1].x, parts[i + 1].y);
       }
-      lastColor = part.color;
     }
 
     const str = p.toString(); // this is the svg path definition string
@@ -159,7 +157,7 @@ import ExpLayout from "../../../layouts/ExpLayout.astro";
     } else {
       ctx.filter = "none";
     }
-    ctx.fillStyle = lastColor;
+    ctx.fillStyle = COLOR;
 
     if(SHOW_PATH) {
       ctx.strokeStyle = "#222";
