--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,205 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import Intro from '../components/Intro.jsx';
+import ExpLayout from "../layouts/ExpLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
+import Prose from "../components/Prose.astro";
+import { getCollection } from "astro:content";
+import "../styles/global.css";
+const pageTitle = "Blog Page";
+import createSlug from "../lib/createSlug";
+const allPosts = await getCollection("blog");
+
+// random color always in a darker tone
+const randomColor = () => {
+  // use hsl
+  return `hsl(${Math.floor(Math.random() * 360)}, 100%, 18%)`;
+};
+const baseColor = randomColor();
 ---
-<BaseLayout includeHeader={false} includeFooter={false}>
-    <Intro client:load />
-</BaseLayout>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/assets/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/assets/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/assets/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/assets/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/assets/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/assets/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/assets/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/assets/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/assets/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+		<style define:vars={{ foregroundColor: baseColor, backgroundColor: baseColor }}>
+			body {
+				background-color: var(--backgroundColor);
+			}
+		</style>
+
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <title>joe.maddalone</title>
+  </head>
+  <body class="body-container">
+		<div class="mx-5 mt-1">
+			<h1 class="text-2xl font-bold font-mono text-white/30">Hi! I'm Joe.</h1>
+		</div>
+    <div class="flex items-start justify-start p-4 h-container">
+      <div class="flex flex-wrap w-[33%] mr-4">
+        <h2 class="text-2xl font-bold font-mono text-white/30">/words</h2>
+        <div class="explist">
+          {
+            allPosts
+              .filter((post) => post.data.tags.includes("post"))
+              .sort((a, b) => a.data.date.getTime() - b.data.date.getTime())
+              .reverse()
+              .map((post) => (
+                <a
+                  href={`/${createSlug(post.data.title)}`}
+
+                >
+                  <div class="label">{post.data?.short || post.data.title}</div>
+                  <div class="counter fill-low" />
+                </a>
+              ))
+          }
+        </div>
+      </div>
+      <div class="flex flex-wrap w-[450px]">
+        <h2 class="text-2xl font-bold font-mono text-white/30 basis-full">/experiments</h2>
+        <div class="explist">
+          <a href="/experiments/seam">
+            <div class="label">seam carving</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="/experiments/web-audio">
+            <div class="label">web audio</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="/experiments/canvas-exp">
+            <div class="label">canvas video grid</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="/experiments/canvas-video-shape">
+            <div class="label">canvas video shape clipping</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="/experiments/particles">
+            <div class="label">particles</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="/experiments/html-svg-canvas">
+            <div class="label text-left">&rarr;html &rarr;svg &rarr;canvas</div>
+            <div class="counter fill-low"></div>
+          </a>
+        </div>
+				<h2 class="mt-6 text-2xl font-bold font-mono text-white/30 basis-full">/socials</h2>
+        <div class="explist">
+          <a href="https://github.com/joemaddalone">
+            <div class="label">github</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="https://linkedin.com/in/joemaddalone">
+            <div class="label">linkedin</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="https://youtube.com/joemaddalone">
+            <div class="label">youtube</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="https://twitter.com/joemaddalone">
+            <div class="label">twitter</div>
+            <div class="counter fill-low"></div>
+          </a>
+        </div>
+				<h2 class="mt-6 text-2xl font-bold font-mono text-white/30 basis-full">/projects</h2>
+        <div class="explist">
+          <a href="https://joemaddalone.github.io/react-svg-path-docs/#/">
+            <div class="label">react-svg-path</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="https://2019.reactloop.com/">
+            <div class="label">react loop</div>
+            <div class="counter fill-low"></div>
+          </a>
+          <a href="https://joemaddalone.github.io/path/">
+            <div class="label">path</div>
+            <div class="counter fill-low"></div>
+          </a>
+        </div>
+				<h2 class="mt-6 text-2xl font-bold font-mono text-white/30 basis-full">&nbsp;</h2>
+				<div class="explist">
+          <a href="/resume">
+            <div class="label">RESUME</div>
+            <div class="counter fill-low"></div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
