--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ const allPosts = await getCollection("blog");
 			<h1 class="text-2xl font-bold font-mono text-white/30">Hi! I'm Joe.</h1>
 		</div>
     <div class="flex items-start justify-start p-4 h-container">
-      <div class="flex flex-wrap w-[33%] mr-4">
+      <div class="flex flex-wrap col-words">
         <h2 class="text-2xl font-bold font-mono text-white/30">/words</h2>
         <div class="explist">
           {
@@ -117,7 +117,7 @@ const allPosts = await getCollection("blog");
           }
         </div>
       </div>
-      <div class="flex flex-wrap w-[450px]">
+      <div class="flex flex-wrap col-experiments">
         <h2 class="text-2xl font-bold font-mono text-white/30 basis-full">/experiments</h2>
         <div class="explist">
           <a href="/experiments/seam">
